# libhybridspi

./: Makefile.am  PI_minimal.xml  README.md  autogen.sh  configure.ac  libhybridspi.pc  libhybridspi.pc.in
config/: acinclude.m4
doc/: Makefile.am
examples/: PI_minimal.xml  PI_real.xml  PI_spec.xml  SI.xml  create_programmeinfo_minimal.h  create_programmeinfo_spec.h  create_serviceinfo_spec.h  marshall_programmeinfo_minimal_binary.cpp  marshall_programmeinfo_minimal_xml.cpp  marshall_serviceinfo_minimal_binary.cpp  unmarshall_programmeinfo_minimal_xml.cpp  unmarshall_programmeinfo_spec_xml.cpp  unmarshall_programmeinfo_xml.cpp
include/: Makefile.am
include/hybridspi/: binary.h  common.h  groups.h  marshall.h  mot.h  programmes.h  services.h  xml.h
src/: Makefile.am  decode_si_xml.cpp  hybridspi.h  hybridspi_mot.cpp  hybridspi_mot.h  libhybridspi.pc.in  robin.cpp  write_binary.cpp
src/hybridspi/: binary.cpp  common.cpp  mot.cpp  programmes.cpp  services.cpp  util.h  xml.cpp
test/: Makefile.am  encode_directory.cpp  manifest.json  test_header_parameters.cpp
tests/: create_programmeinfo_minimal.h  create_serviceinfo_minimal.h  encode_directory.cpp  marshall_programmeinfo_spec_xml.cpp  marshall_serviceinfo_minimal_binary.cpp  marshall_serviceinfo_minimal_xml.cpp  serviceinfo_minimal_binary.cpp  serviceinfo_minimal_xml.cpp  test_build_bearer.cpp  test_build_name.cpp  test_encode_attribute.cpp  test_encode_bearer.cpp  test_encode_cdata.cpp  test_encode_header_parameters.cpp  test_encode_name.cpp  test_encode_number.cpp  test_encode_string.cpp  test_encode_timepoint.cpp  test_header_parameters.cpp  test_parse_duration.cpp  test_serviceinfo.cpp  test_util.h  unmarshall_serviceinfo_spec_xml.cpp
