lib_LIBRARIES = libhybridspi.a

libhybridspi_a_SOURCES = hybridspi.cpp hybridspi.h \
                         hybridspi_binary.cpp hybridspi_binary.h \
                         hybridspi_xml.cpp hybridspi_xml.h \
                         hybridspi_mot.cpp hybridspi_mot.h
libhybridspi_a_CPPFLAGS = -I${libmot_CFLAGS}
libhybridspi_a_LIBADD = -lmot§
